--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,6 +62,11 @@
 
 <script src="{{asset('assets/js/bootstrap.bundle.min.js')}}"></script>
 <script src="/{{asset('assets/js/global.js')}}"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        feather.replace();
+    });
+</script>
 </body>
 </html>
 
