--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,7 +56,7 @@
 
     <!-- FOOTER -->
     <footer class="container">
-        <p>&copy; 2017–2024 La Boutique Française <a href="#">CGV</a> &middot; <a href="#">CGU</a></p>
+        <p>&copy; Depuis 2024 - Bazoo <a href="#">CGV</a> &middot; <a href="#">CGU</a></p>
     </footer>
 </main>
 
