Updated : UX for Member Area

--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -18,6 +18,9 @@
         <input type="hidden" name="_target_path" value="{{ path('app_account')}}">
 
         <button class="btn btn-success mt-3" type="submit">Me connecter</button>
-    </form>        
+    </form>
+
+    <br/>
+    Vous n'avez pas de compte ? <a href="{{ path('app_register') }}">Inscrivez-vous</a>        
     </div>
 {% endblock %}
