--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
     <link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
     <link href="{{asset('assets/css/custom.css')}}" rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="{{asset('assets/js/bootstrap.bundle.min.js')}}"></script>
+    <script src="/{{asset('assets/js/global.js')}}"></script>
 </head>
 <body>
 
@@ -40,7 +42,12 @@
                     </li>
                 </ul>
                 <div class="speed-menu">
-                    <a href=""><i data-feather="user"></i></a>
+                    {% if app.user %}
+                        <a href="{{ path('app_account') }}"><i data-feather="user"></i>{{ app.user.firstname }}</a>
+                    {% else %}
+                        <a href="{{ path('app_login') }}"><i data-feather="user"></i></a>
+                    {% endif %}
+                    
                     <a href=""><i data-feather="shopping-cart"></i></a>
                 </div>
             </div>
@@ -60,8 +67,7 @@
     </footer>
 </main>
 
-<script src="{{asset('assets/js/bootstrap.bundle.min.js')}}"></script>
-<script src="/{{asset('assets/js/global.js')}}"></script>
+
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         feather.replace();
