--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -6,5 +6,8 @@
 
     {{ form(registerForm) }}
 
+    <br/>
+    Vous avez déjà un compte ? <a href="{{ path('app_login')}}"> Connectez-vous</a>
+
 </div>
 {% endblock %}
