Updated : some details about UX details (underlined buttons, name non-capitalized)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,28 +22,28 @@
 <header data-bs-theme="dark">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Bazoo</a>
+            <a class="navbar-brand" href="{{ path('app_home') }}">Bazoo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Chat</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Chien</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Oiseau</a>
                     </li>
                 </ul>
                 <div class="speed-menu">
                     {% if app.user %}
-                        <a href="{{ path('app_account') }}"><i data-feather="user"></i>{{ app.user.firstname }}</a>
+                        <a href="{{ path('app_account') }}"><i data-feather="user"></i>{{ app.user.firstname|capitalize}}</a>
                     {% else %}
                         <a href="{{ path('app_login') }}"><i data-feather="user"></i></a>
                     {% endif %}
