--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -5,6 +5,7 @@
     <div class="container my-5">
         <h1>Espace membre privé !</h1>
         <a href="{{ path('app_logout') }}">Me déconnecter</a>
+        <a href="">Modifier mot de passe</a>
     </div>
 
 {% endblock %}
