--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -3,10 +3,17 @@
 {% block body %}
 
     <div class="container my-5">
-        <h1>Espace membre privé !</h1>
-        <h3>Modification de mon mot de passe</h3>
+        <h1>Espace membre</h1>
 
-        {{ form(modifierMdp) }}
+        <div class="row">
+            <div class="col-md-3">
+                {% include 'account/menu.html.twig' %}
+            </div>
+            <div class="col-md-9">
+                <h5>Modification de mon mot de passe</h5>
+                {{ form(modifierMdp) }}
+            </div>
+        </div>
     </div>
 
 {% endblock %}
