--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -9,9 +9,11 @@
         <div class="row">
             {% for product in category.products %}
                 <div class="col-md-3 text-center">
+                    <a href="{{ path('app_product', {slug : product.slug})}}" class="text-decoration-none">
                     <img src="/uploads/{{product.image}}" class="img-fluid">
-                    <strong>{{ product.name }}</strong>
-                    <span class="d-block">{{product.priceWt}}</span>
+                    <span class="d-block fw-bold text-black">{{ product.name }}</span>
+                    </a>
+                    <span class="d-block">{{product.price|price}}</span>
                 </div>
             {% endfor %}
             
