--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -12,7 +12,7 @@
                 <h1><U>{{product.name}}</U></h1>
                 <span class="d-block mb-3"><strong><U>Prix</U> : </strong>{{product.price|price}}</span>
                 {{product.description|raw}}
-                <button class="btn btn-success w-100 mt-3">Ajouter au panier</button>
+                <a href="{{ path('app_cart_add', {id : product.id})}}" class="btn btn-success w-100 mt-3">Ajouter au panier</a>
                 
                 
                 
