--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -6,14 +6,42 @@
         <h1>Mon panier</h1>
 
         <div class="row">
-
             <div class="col-md-8">
-                Liste de mes produits
-                {{dump(cart)}}
+            {% for product in cart %}
+                    <div class="row mt-2">
+                        {# {{dump(product)}} #}
+                        <div class="col-md-2">
+                            <img src="/uploads/{{ product.object.image}}" class="img-fluid" alt="{{product.object.name}}">
+                        </div>
+                        <div class="col-md-6">
+                            <strong>{{product.object.name}}</strong>
+                            <span class="d-block small">Prix unitaire : {{product.object.price|price}}</span>
+                        </div>
+                        <div class="col-md-2 text-right">
+                            <a href="{{ path('app_cart_decrease', {id : product.object.id})}}">- </a><span class="badge text-bg-secondary">x{{product.qty}}</span><a href="{{ path('app_cart_add', {id : product.object.id})}}"> +</a>                            
+                        </div>
+                        <div class="col-md-2">
+                            <strong>{{(product.qty * product.object.price)|price}}</strong>
+                        </div>
+                    </div>
+                {% endfor %}
+                <a href="{{ path('app_cart_remove')}}" class="small d-block mt-3" >Vider le panier</a>
             </div>
 
             <div class="col-md-4">
-                Récap de mon panier
+                <div class="bg-light p-3">
+                    <div class="d-flex justify-content-between">
+                        <span class="fw-bold">Total produit</span>
+                        <span>{{fullCartQuantity}}</span>
+                    </div>
+                    <div class="d-flex justify-content-between mt-3">
+                        <span class="fw-bold">Prix total</span>
+                        <span>{{totalWt|price}}</span>
+                    </div>
+                    <div>
+                        <a href="" class="btn btn-success w-100 mt-3">Commander</a>
+                    </div>                     
+                </div>
             </div>
 
         </div>
