--- a/assets/assets/css/custom.css
+++ b/assets/assets/css/custom.css
@@ -87,3 +87,13 @@
 .bg-light-blue {
     background-color: #f4f7ff;
 }
+
+#order_adresses .form-check, #order_carriers .form-check {
+    background-color: #e8f1ff;
+    padding: 10px 40px;;
+}
+
+.small-container {
+    max-width: 800px;
+    margin: 0 auto
+}
